--- a/public/main.html
+++ b/public/main.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="es">
+<html lang="es"> <!-- manifest="main.manifest" -->
 <head>
 	<meta charset="UTF-8" />
 	<meta name="author" content="Caxvalencia" />
@@ -13,6 +13,7 @@
 
 	<script src="js/Utils.js"></script>
 	<script src="js/File.js"></script>
+	<script src="js/TrimImage.js"></script>
 	<script src="js/Main.js"></script>
 </head>
 <body>
