--- a/public/main.html
+++ b/public/main.html
@@ -11,7 +11,9 @@
 
 	<link rel="stylesheet" href="css/main.css" />
 
-	<script src="js/Utils.js"></script>
+	<script src="js/lib/Module.js"></script>
+	<script src="js/lib/Cache.js"></script>
+	<script src="js/lib/Utils.js"></script>
 	<script src="js/File.js"></script>
 	<script src="js/TrimImage.js"></script>
 	<script src="js/Main.js"></script>
