--- a/public/main.html
+++ b/public/main.html
@@ -14,7 +14,7 @@
 	<script src="js/lib/Module.js"></script>
 	<script src="js/lib/Cache.js"></script>
 	<script src="js/lib/Utils.js"></script>
-	<script src="js/File.js"></script>
+	<script src="js/Atlax.js"></script>
 	<script src="js/TrimImage.js"></script>
 	<script src="js/Main.js"></script>
 </head>
